@@ -26,14 +26,15 @@ package com.oracle.svm.truffle.tck;
 
 import static com.oracle.graal.pointsto.reports.ReportUtils.report;
 
-import java.io.FileDescriptor;
 import java.io.IOException;
+import java.lang.invoke.MethodHandle;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Method;
+import java.lang.reflect.Proxy;
 import java.math.BigInteger;
-import java.net.InetAddress;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.security.Permission;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
@@ -41,49 +42,56 @@ import java.util.Deque;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
-import java.util.LinkedHashSet;
 import java.util.LinkedList;
 import java.util.List;
+import java.util.ListIterator;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Set;
+import java.util.concurrent.SynchronousQueue;
 import java.util.function.BooleanSupplier;
+import java.util.function.Function;
 import java.util.function.Predicate;
+import java.util.spi.LocaleServiceProvider;
 import java.util.stream.Collectors;
 
-import jdk.graal.compiler.debug.DebugContext;
-import jdk.graal.compiler.graph.NodeInputList;
-import jdk.graal.compiler.nodes.Invoke;
-import jdk.graal.compiler.nodes.PiNode;
-import jdk.graal.compiler.nodes.StructuredGraph;
-import jdk.graal.compiler.nodes.ValueNode;
-import jdk.graal.compiler.nodes.java.NewInstanceNode;
-import jdk.graal.compiler.options.Option;
-import jdk.graal.compiler.options.OptionType;
+import com.oracle.svm.hosted.code.FactoryMethod;
+import com.oracle.svm.util.LogUtils;
+import jdk.graal.compiler.nodes.virtual.AllocatedObjectNode;
 import org.graalvm.nativeimage.ImageSingletons;
 import org.graalvm.nativeimage.hosted.Feature;
 import org.graalvm.polyglot.io.FileSystem;
 
 import com.oracle.graal.pointsto.BigBang;
+import com.oracle.graal.pointsto.infrastructure.OriginalClassProvider;
 import com.oracle.graal.pointsto.meta.AnalysisMethod;
 import com.oracle.graal.pointsto.meta.AnalysisType;
 import com.oracle.graal.pointsto.meta.InvokeInfo;
-import com.oracle.svm.core.SubstrateOptions;
 import com.oracle.svm.core.annotate.Substitute;
 import com.oracle.svm.core.annotate.TargetClass;
+import com.oracle.svm.core.option.AccumulatingLocatableMultiOptionValue;
 import com.oracle.svm.core.option.BundleMember;
 import com.oracle.svm.core.option.HostedOptionKey;
-import com.oracle.svm.core.option.LocatableMultiOptionValue;
 import com.oracle.svm.core.util.UserError;
 import com.oracle.svm.hosted.FeatureImpl;
-import com.oracle.svm.hosted.ImageClassLoader;
 import com.oracle.svm.hosted.SVMHost;
 import com.oracle.svm.hosted.config.ConfigurationParserUtils;
 import com.oracle.svm.util.ClassUtil;
 import com.oracle.truffle.api.TruffleLanguage;
 import com.oracle.truffle.runtime.OptimizedCallTarget;
 
-import jdk.vm.ci.common.JVMCIError;
+import jdk.graal.compiler.debug.DebugContext;
+import jdk.graal.compiler.graph.Node;
+import jdk.graal.compiler.graph.NodeInputList;
+import jdk.graal.compiler.graph.NodeSourcePosition;
+import jdk.graal.compiler.nodes.Invoke;
+import jdk.graal.compiler.nodes.PiNode;
+import jdk.graal.compiler.nodes.StructuredGraph;
+import jdk.graal.compiler.nodes.ValueNode;
+import jdk.graal.compiler.nodes.java.NewInstanceNode;
+import jdk.graal.compiler.nodes.spi.TrackedUnsafeAccess;
+import jdk.graal.compiler.options.Option;
+import jdk.graal.compiler.options.OptionType;
 import jdk.vm.ci.meta.ModifiersProvider;
 import jdk.vm.ci.meta.ResolvedJavaMethod;
 import jdk.vm.ci.meta.ResolvedJavaType;
@@ -97,12 +105,17 @@ import jdk.vm.ci.meta.ResolvedJavaType;
  * To execute the {@code PermissionsFeature} you need to enable it using
  * {@code --features=com.oracle.svm.truffle.tck.PermissionsFeature} native-image option, specify
  * report file using {@code -H:TruffleTCKPermissionsReportFile} option and specify the language
- * packages by {@code -H:TruffleTCKPermissionsLanguagePackages} option. You also need to disable
- * folding of {@code System.getSecurityManager} using {@code -H:-FoldSecurityManagerGetter} option.
+ * packages by {@code -H:TruffleTCKPermissionsLanguagePackages} option.
  */
 public class PermissionsFeature implements Feature {
 
     private static final String CONFIG = "truffle-language-permissions-config.json";
+
+    public enum ActionKind {
+        Ignore,
+        Warn,
+        Throw
+    }
 
     public static class Options {
         @Option(help = "Path to file where to store report of Truffle language privilege access.")//
@@ -110,13 +123,21 @@ public class PermissionsFeature implements Feature {
 
         @BundleMember(role = BundleMember.Role.Input)//
         @Option(help = "Comma separated list of exclude files.")//
-        public static final HostedOptionKey<LocatableMultiOptionValue.Paths> TruffleTCKPermissionsExcludeFiles = new HostedOptionKey<>(LocatableMultiOptionValue.Paths.buildWithCommaDelimiter());
+        public static final HostedOptionKey<AccumulatingLocatableMultiOptionValue.Paths> TruffleTCKPermissionsExcludeFiles = new HostedOptionKey<>(
+                        AccumulatingLocatableMultiOptionValue.Paths.buildWithCommaDelimiter());
 
         @Option(help = "Maximal depth of a stack trace.", type = OptionType.Expert)//
         public static final HostedOptionKey<Integer> TruffleTCKPermissionsMaxStackTraceDepth = new HostedOptionKey<>(-1);
 
         @Option(help = "Maximum number of erroneous privileged accesses reported.", type = OptionType.Expert)//
         public static final HostedOptionKey<Integer> TruffleTCKPermissionsMaxErrors = new HostedOptionKey<>(100);
+
+        @Option(help = {"Specifies how unused methods in the language allow list should be handled.",
+                        "Available options are:",
+                        "  \"Ignore\": Do not report unused methods in the allow list.",
+                        "  \"Warn\": Log a warning message to stderr.",
+                        "  \"Throw\" (default): Throw an exception and abort the native-image build process."}, type = OptionType.Expert)//
+        public static final HostedOptionKey<ActionKind> TruffleTCKUnusedAllowListEntriesAction = new HostedOptionKey<>(ActionKind.Throw);
     }
 
     /**
@@ -135,7 +156,9 @@ public class PermissionsFeature implements Feature {
     private static final Set<String> safePackages;
     static {
         safePackages = new HashSet<>();
-        safePackages.add("org.graalvm.");
+        safePackages.add("org.graalvm.polyglot.");
+        safePackages.add("org.graalvm.home.");
+        safePackages.add("jdk.graal.compiler.");
         safePackages.add("com.oracle.graalvm.");
         safePackages.add("com.oracle.svm.core.");
         safePackages.add("com.oracle.truffle.api.");
@@ -143,6 +166,19 @@ public class PermissionsFeature implements Feature {
         safePackages.add("com.oracle.truffle.host.");
         safePackages.add("com.oracle.truffle.nfi.");
         safePackages.add("com.oracle.truffle.object.");
+        safePackages.add("com.oracle.truffle.runtime.");
+        safePackages.add("com.oracle.truffle.runtime.debug.");
+        safePackages.add("com.oracle.truffle.runtime.jfr.");
+        safePackages.add("com.oracle.truffle.runtime.jfr.impl.");
+        safePackages.add("com.oracle.truffle.runtime.hotspot.");
+        safePackages.add("com.oracle.truffle.runtime.hotspot.libgraal.");
+        safePackages.add("com.oracle.truffle.runtime.enterprise.");
+        safePackages.add("com.oracle.truffle.sandbox.enterprise.");
+        safePackages.add("com.oracle.truffle.polyglot.enterprise.");
+        safePackages.add("com.oracle.truffle.object.enterprise.");
+        safePackages.add("com.oracle.svm.truffle.api.");
+        safePackages.add("com.oracle.svm.truffle.isolated.");
+        safePackages.add("com.oracle.svm.enterprise.truffle.");
     }
 
     private static final Set<ClassLoader> systemClassLoaders;
@@ -156,7 +192,7 @@ public class PermissionsFeature implements Feature {
     /**
      * Methods which should not be found.
      */
-    private Set<BaseMethodNode> deniedMethods = new HashSet<>();
+    private final Set<BaseMethodNode> deniedMethods = new HashSet<>();
 
     /**
      * Path to store report into.
@@ -164,9 +200,14 @@ public class PermissionsFeature implements Feature {
     private Path reportFilePath;
 
     /**
-     * Methods which are allowed to do privileged calls without being reported.
+     * JDK methods which are allowed to do privileged calls without being reported.
      */
-    private Set<? extends BaseMethodNode> whiteList;
+    private Set<? extends BaseMethodNode> platformAllowList;
+
+    /**
+     * Language methods which are allowed to do privileged calls without being reported.
+     */
+    private Map<BaseMethodNode, Boolean> languageAllowList;
 
     private Set<CallGraphFilter> contextFilters;
 
@@ -185,9 +226,6 @@ public class PermissionsFeature implements Feature {
 
     @Override
     public void beforeAnalysis(BeforeAnalysisAccess access) {
-        if (SubstrateOptions.FoldSecurityManagerGetter.getValue()) {
-            UserError.abort("%s requires -H:-FoldSecurityManagerGetter option.", ClassUtil.getUnqualifiedName(getClass()));
-        }
         String reportFile = Options.TruffleTCKPermissionsReportFile.getValue();
         if (reportFile == null) {
             UserError.abort("Path to report file must be given by -H:TruffleTCKPermissionsReportFile option.");
@@ -204,15 +242,17 @@ public class PermissionsFeature implements Feature {
         BigBang bb = accessImpl.getBigBang();
         contextFilters = new HashSet<>();
         Collections.addAll(contextFilters, new SafeInterruptRecognizer(bb), new SafePrivilegedRecognizer(bb),
-                        new SafeServiceLoaderRecognizer(bb, accessImpl.getImageClassLoader()), new SafeSetThreadNameRecognizer(bb));
+                        new SafeReflectionRecognizer(bb), new SafeSetThreadNameRecognizer(bb),
+                        new SafeLocaleServiceProvider(bb), new SafeSystemGetProperty(bb));
 
         /*
-         * Ensure methods which are either deniedMethods or on the whiteList are never inlined into
+         * Ensure methods which are either deniedMethods or on the allow list are never inlined into
          * methods. These methods are important for identifying violations.
          */
         Set<AnalysisMethod> preventInlineBeforeAnalysis = new HashSet<>();
         deniedMethods.stream().map(BaseMethodNode::getMethod).forEach(preventInlineBeforeAnalysis::add);
-        whiteList.stream().map(BaseMethodNode::getMethod).forEach(preventInlineBeforeAnalysis::add);
+        platformAllowList.stream().map(BaseMethodNode::getMethod).forEach(preventInlineBeforeAnalysis::add);
+        languageAllowList.keySet().stream().map(BaseMethodNode::getMethod).forEach(preventInlineBeforeAnalysis::add);
         contextFilters.stream().map(CallGraphFilter::getInspectedMethods).forEach(preventInlineBeforeAnalysis::addAll);
 
         accessImpl.getHostVM().registerNeverInlineTrivialHandler((caller, callee) -> {
@@ -235,15 +275,27 @@ public class PermissionsFeature implements Feature {
         if (sunMiscUnsafe != null) {
             inlinedUnsafeCall = new InlinedUnsafeMethodNode(bb.getMetaAccess().lookupJavaType(sunMiscUnsafe));
         }
-        WhiteListParser parser = new WhiteListParser(accessImpl.getImageClassLoader(), bb);
-        ConfigurationParserUtils.parseAndRegisterConfigurations(parser,
-                        accessImpl.getImageClassLoader(),
-                        ClassUtil.getUnqualifiedName(getClass()),
-                        Options.TruffleTCKPermissionsExcludeFiles,
-                        new ResourceAsOptionDecorator(getClass().getPackage().getName().replace('.', '/') + "/resources/jre.json"),
-                        CONFIG);
-        whiteList = parser.getLoadedWhiteList();
-        deniedMethods.addAll(findMethods(bb, SecurityManager.class, (m) -> m.getName().startsWith("check")));
+        String featureName = ClassUtil.getUnqualifiedName(getClass());
+        AllowListParser allowListparser = new AllowListParser(accessImpl.getImageClassLoader(), bb);
+        ConfigurationParserUtils.parseAndRegisterConfigurations(allowListparser, accessImpl.getImageClassLoader(), featureName,
+                        CONFIG,
+                        List.of(),
+                        List.of(getClass().getPackage().getName().replace('.', '/') + "/resources/jdk_allowed_methods.json"));
+        platformAllowList = allowListparser.getMethods();
+        allowListparser = new AllowListParser(accessImpl.getImageClassLoader(), bb);
+        ConfigurationParserUtils.parseAndRegisterConfigurations(allowListparser, accessImpl.getImageClassLoader(), featureName,
+                        CONFIG,
+                        Options.TruffleTCKPermissionsExcludeFiles.getValue().values(),
+                        List.of());
+        languageAllowList = allowListparser.getMethods().stream().collect(Collectors.toMap(Function.identity(), key -> false));
+
+        PrivilegedListParser privilegedListParser = new PrivilegedListParser(accessImpl.getImageClassLoader(), bb, ModuleLayer.boot().modules());
+        ConfigurationParserUtils.parseAndRegisterConfigurations(privilegedListParser, accessImpl.getImageClassLoader(), "featureName",
+                        CONFIG,
+                        List.of(),
+                        List.of(getClass().getPackage().getName().replace('.', '/') + "/resources/jdk_privileged_methods.json"));
+        deniedMethods.addAll(privilegedListParser.getMethods());
+
         if (sunMiscUnsafe != null) {
             deniedMethods.addAll(findMethods(bb, sunMiscUnsafe, ModifiersProvider::isPublic));
         }
@@ -253,8 +305,16 @@ public class PermissionsFeature implements Feature {
         // can be directly used by a language. We need to include it into deniedMethods.
         deniedMethods.addAll(findMethods(bb, FileSystem.newDefaultFileSystem().getClass(), ModifiersProvider::isPublic));
         // JDK 19 introduced BigInteger.parallelMultiply that uses the ForkJoinPool.
-        // We deny this method but explicitly allow non-parallel multiply (cf. jre.json).
+        // We deny this method but explicitly allow non-parallel multiply (cf.
+        // jdk_allowed_methods.json).
         deniedMethods.addAll(findMethods(bb, BigInteger.class, (m) -> m.getName().startsWith("parallel")));
+        // We deny SynchronousQueue as it creates ForkJoinWorkerThread.
+        deniedMethods.addAll(findConstructors(bb, SynchronousQueue.class, (m) -> "<init>".equals(m.getName())));
+        // Reflective calls
+        deniedMethods.addAll(findMethods(bb, Method.class, (m) -> m.getName().equals("invoke") && m.isPublic() && m.getParameters().length == 2));
+        deniedMethods.addAll(findMethods(bb, Constructor.class, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 1));
+        deniedMethods.addAll(findMethods(bb, MethodHandle.class, (m) -> m.getName().startsWith("invoke") && m.isPublic()));
+        deniedMethods.addAll(findMethods(bb, Class.class, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 0));
         if (inlinedUnsafeCall != null) {
             deniedMethods.add(inlinedUnsafeCall);
         }
@@ -279,10 +339,9 @@ public class PermissionsFeature implements Feature {
             for (BaseMethodNode deniedMethod : deniedMethods) {
                 if (cg.containsKey(deniedMethod)) {
                     collectViolations(report, deniedMethod,
-                                    maxStackDepth,
-                                    Options.TruffleTCKPermissionsMaxErrors.getValue(),
+                                    maxStackDepth, Options.TruffleTCKPermissionsMaxErrors.getValue(),
                                     cg, contextFilters,
-                                    new LinkedHashSet<>(), 1, 0);
+                                    new LinkedList<>(), new HashSet<>(), 1, 0);
                 }
             }
             if (!report.isEmpty()) {
@@ -293,21 +352,28 @@ public class PermissionsFeature implements Feature {
                                     StringBuilder builder = new StringBuilder();
                                     for (List<BaseMethodNode> callPath : report) {
                                         for (BaseMethodNode call : callPath) {
-                                            builder.append(call.asStackTraceElement()).append('\n');
+                                            builder.append(call.asStackTraceElement()).append(System.lineSeparator());
                                         }
-                                        builder.append('\n');
+                                        builder.append(System.lineSeparator());
                                     }
                                     pw.print(builder);
                                 });
             }
-        }
-    }
-
-    private static Class<?> loadClassOrFail(String className) {
-        try {
-            return Class.forName(className);
-        } catch (ClassNotFoundException e) {
-            throw JVMCIError.shouldNotReachHere(e);
+            List<BaseMethodNode> unusedLanguageAllowListEntries = languageAllowList.entrySet().stream().filter((e) -> !e.getValue()).map(Map.Entry::getKey).toList();
+            if (!unusedLanguageAllowListEntries.isEmpty()) {
+                StringBuilder errorMessageBuilder = new StringBuilder(
+                                "The following methods in the language allow list were not statically reachable during points-to analysis. " + "Please review and remove them from the allow list:\n");
+                for (BaseMethodNode unused : unusedLanguageAllowListEntries) {
+                    errorMessageBuilder.append(" - ").append(unused.getMethod().format("%H.%n(%p)")).append("\n");
+                }
+                switch (Options.TruffleTCKUnusedAllowListEntriesAction.getValue()) {
+                    case Ignore -> {
+                    }
+                    case Warn -> LogUtils.warning("[%s] %s", ClassUtil.getUnqualifiedName(getClass()), errorMessageBuilder);
+                    case Throw -> throw UserError.abort(errorMessageBuilder.toString());
+                    default -> throw new AssertionError(Options.TruffleTCKUnusedAllowListEntriesAction.getValue());
+                }
+            }
         }
     }
 
@@ -335,6 +401,52 @@ public class PermissionsFeature implements Feature {
         return visited;
     }
 
+    private void findUnsafeAccesses(
+                    BaseMethodNode mNode,
+                    Map<BaseMethodNode, Set<BaseMethodNode>> visited,
+                    SVMHost hostVM) {
+        /*
+         * In this situation it is unnecessary to check for unsafe accesses.
+         */
+        if (inlinedUnsafeCall == null || isSystemOrSafeClass(mNode)) {
+            return;
+        }
+
+        if (Proxy.isProxyClass(mNode.getOwner().getJavaClass())) {
+            /*
+             * Starting JDK-23+26 Proxy generated code does unsafe compare and set. The generated
+             * proxy method calls the used invocation handler which is checked for possible unsafe
+             * access.
+             */
+            return;
+        }
+
+        StructuredGraph mGraph = hostVM.getAnalysisGraph(mNode.getMethod());
+        for (Node node : mGraph.getNodes().filter(n -> n instanceof TrackedUnsafeAccess)) {
+            /*
+             * Check the origin of all tracked unsafe accesses.
+             *
+             * We must determine whether the access originates from a safe class. It is possible for
+             * these accesses to be inlined into other methods during the method handle
+             * intrinsification process.
+             */
+            NodeSourcePosition current = node.getNodeSourcePosition();
+            boolean foundSystemClass = false;
+            while (current != null) {
+                var declaringClass = OriginalClassProvider.getJavaClass(current.getMethod().getDeclaringClass());
+                if (!declaringClass.equals(sunMiscUnsafe) && isSystemClass(declaringClass)) {
+                    foundSystemClass = true;
+                    break;
+                }
+                current = current.getCaller();
+            }
+            if (!foundSystemClass) {
+                visited.computeIfAbsent(inlinedUnsafeCall, (e) -> new HashSet<>()).add(mNode);
+                return;
+            }
+        }
+    }
+
     private boolean callGraphImpl(
                     BaseMethodNode mNode,
                     Set<BaseMethodNode> targets,
@@ -345,20 +457,14 @@ public class PermissionsFeature implements Feature {
         AnalysisMethod m = mNode.getMethod();
         String mName = getMethodName(m);
         path.addFirst(mNode);
-        StructuredGraph mGraph = hostVM.getAnalysisGraph(m);
-        if (mGraph.hasUnsafeAccess() && !isSystemOrSafeClass(mNode)) {
-            debugContext.log(DebugContext.VERY_DETAILED_LEVEL, "Method: %s has unsafe access.", mName);
-            if (inlinedUnsafeCall != null) {
-                visited.computeIfAbsent(inlinedUnsafeCall, (e) -> new HashSet<>()).add(mNode);
-            }
-        }
+        findUnsafeAccesses(mNode, visited, hostVM);
         try {
             boolean callPathContainsTarget = false;
             debugContext.log(DebugContext.VERY_DETAILED_LEVEL, "Entered method: %s.", mName);
             for (InvokeInfo invoke : m.getInvokes()) {
                 for (AnalysisMethod callee : invoke.getOriginalCallees()) {
                     AnalysisMethodNode calleeNode = new AnalysisMethodNode(callee);
-                    if (callee.isInvoked() || !isSystemOrSafeClass(calleeNode)) {
+                    if (callee.isImplementationInvoked()) {
                         Set<BaseMethodNode> parents = visited.get(calleeNode);
                         String calleeName = getMethodName(callee);
                         debugContext.log(DebugContext.VERY_DETAILED_LEVEL, "Callee: %s, new: %b.", calleeName, parents == null);
@@ -446,8 +552,10 @@ public class PermissionsFeature implements Feature {
      * @param maxReports maximal number of reports
      * @param callGraph call graph obtained from
      *            {@link PermissionsFeature#callGraph(BigBang, Set, DebugContext, SVMHost)}
-     * @param contextFilters filters removing known valid calls
-     * @param visited visited methods
+     * @param contextFiltersParam filters removing known valid calls
+     * @param currentPath current path from a privileged method in a call graph
+     * @param visited set of already visited methods, these methods are already part of an existing
+     *            report or do not lead to language class
      * @param depth current depth
      */
     private int collectViolations(
@@ -456,45 +564,41 @@ public class PermissionsFeature implements Feature {
                     int maxDepth,
                     int maxReports,
                     Map<BaseMethodNode, Set<BaseMethodNode>> callGraph,
-                    Set<CallGraphFilter> contextFilters,
-                    LinkedHashSet<BaseMethodNode> visited,
+                    Set<CallGraphFilter> contextFiltersParam,
+                    List<BaseMethodNode> currentPath,
+                    Set<BaseMethodNode> visited,
                     int depth,
                     int initialNumReports) {
         int numReports = initialNumReports;
         if (numReports >= maxReports) {
             return numReports;
         }
-        if (depth > 1) {
-            // The denied method can be a method from a "safe" class
-            if (isSafeClass(mNode)) {
-                return numReports;
-            }
-            // The denied method can be excluded by a white list
-            if (isExcludedClass(mNode)) {
-                return numReports;
-            }
+        if (isSafeClass(mNode) || isExcludedClass(mNode)) {
+            return numReports;
         }
         if (!visited.contains(mNode)) {
             visited.add(mNode);
+            currentPath.add(mNode);
             try {
                 Set<BaseMethodNode> callers = callGraph.get(mNode);
                 if (depth > maxDepth) {
                     if (!callers.isEmpty()) {
-                        numReports = collectViolations(report, callers.iterator().next(), maxDepth, maxReports, callGraph, contextFilters, visited, depth + 1, numReports);
+                        numReports = collectViolations(report, callers.iterator().next(), maxDepth, maxReports, callGraph, contextFiltersParam, currentPath, visited, depth + 1, numReports);
                     }
-                } else if (!isSystemClass(mNode)) {
-                    List<BaseMethodNode> callPath = new ArrayList<>(visited);
+                } else if (!isSystemOrSafeClass(mNode)) {
+                    List<BaseMethodNode> callPath = new ArrayList<>(currentPath);
                     report.add(callPath);
                     numReports++;
                 } else {
                     for (BaseMethodNode caller : callers) {
-                        if (contextFilters.stream().noneMatch((f) -> f.test(mNode, caller, visited))) {
-                            numReports = collectViolations(report, caller, maxDepth, maxReports, callGraph, contextFilters, visited, depth + 1, numReports);
+                        if (contextFiltersParam.stream().noneMatch((f) -> f.test(mNode, caller, currentPath))) {
+                            numReports = collectViolations(report, caller, maxDepth, maxReports, callGraph, contextFiltersParam, currentPath, visited, depth + 1, numReports);
                         }
                     }
                 }
             } finally {
-                visited.remove(mNode);
+                BaseMethodNode last = currentPath.removeLast();
+                assert last == mNode;
             }
         }
         return numReports;
@@ -511,7 +615,10 @@ public class PermissionsFeature implements Feature {
      * @param methodNode the {@link BaseMethodNode} to check
      */
     private static boolean isSystemClass(BaseMethodNode methodNode) {
-        Class<?> clz = methodNode.getOwner().getJavaClass();
+        return isSystemClass(methodNode.getOwner().getJavaClass());
+    }
+
+    private static boolean isSystemClass(Class<?> clz) {
         if (clz == null) {
             return false;
         }
@@ -549,12 +656,15 @@ public class PermissionsFeature implements Feature {
     }
 
     /**
-     * Tests if the given {@link BaseMethodNode} is excluded by white list.
+     * Tests if the given {@link BaseMethodNode} is excluded by allow list.
      *
      * @param methodNode the {@link BaseMethodNode} to check
      */
     private boolean isExcludedClass(BaseMethodNode methodNode) {
-        return whiteList.contains(methodNode);
+        if (platformAllowList.contains(methodNode)) {
+            return true;
+        }
+        return languageAllowList.computeIfPresent(methodNode, (n, v) -> true) != null;
     }
 
     /**
@@ -584,6 +694,23 @@ public class PermissionsFeature implements Feature {
      */
     static Set<AnalysisMethodNode> findMethods(BigBang bb, AnalysisType owner, Predicate<ResolvedJavaMethod> filter) {
         return findImpl(bb, owner.getWrapped().getDeclaredMethods(false), filter);
+    }
+
+    /**
+     * Finds constructors declared in {@code owner} class using {@code filter} predicate.
+     *
+     * @param bb the {@link BigBang}
+     * @param owner the class which constructor should be listed
+     * @param filter the predicate filtering constructors declared in {@code owner}
+     * @return the constructors accepted by {@code filter}
+     * @throws IllegalStateException if owner cannot be resolved
+     */
+    private static Set<AnalysisMethodNode> findConstructors(BigBang bb, Class<?> owner, Predicate<ResolvedJavaMethod> filter) {
+        AnalysisType clazz = bb.getMetaAccess().lookupJavaType(owner);
+        if (clazz == null) {
+            throw new IllegalStateException("Cannot resolve " + owner.getName() + ".");
+        }
+        return findConstructors(bb, clazz, filter);
     }
 
     /**
@@ -625,7 +752,7 @@ public class PermissionsFeature implements Feature {
         /**
          * @return whether this methodNode should not be considered a violation
          */
-        boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace);
+        boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace);
 
         Collection<AnalysisMethod> getInspectedMethods();
     }
@@ -655,21 +782,23 @@ public class PermissionsFeature implements Feature {
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
             Boolean res = null;
             if (threadInterrupt.equals(methodNode)) {
                 AnalysisMethod caller = callerNode.getMethod();
                 StructuredGraph graph = hostVM.getAnalysisGraph(caller);
                 for (Invoke invoke : graph.getInvokes()) {
                     if (threadInterrupt.getMethod().equals(invoke.callTarget().targetMethod())) {
+                        boolean vote = false;
                         ValueNode node = invoke.getReceiver();
-                        if (node instanceof PiNode) {
-                            node = ((PiNode) node).getOriginalNode();
-                            if (node instanceof Invoke) {
-                                boolean isCurrentThread = threadCurrentThread.equals(((Invoke) node).callTarget().targetMethod());
-                                res = res == null ? isCurrentThread : (res && isCurrentThread);
+                        if (node instanceof PiNode piNode) {
+                            node = piNode.getOriginalNode();
+                            if (node instanceof Invoke invokeNode) {
+                                boolean isCurrentThread = threadCurrentThread.equals(invokeNode.callTarget().targetMethod());
+                                vote = res == null ? isCurrentThread : (res && isCurrentThread);
                             }
                         }
+                        res = vote;
                     }
                 }
             }
@@ -696,7 +825,7 @@ public class PermissionsFeature implements Feature {
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
             if (!doPrivileged.contains(methodNode)) {
                 return false;
             }
@@ -712,13 +841,24 @@ public class PermissionsFeature implements Feature {
                     if (args.isEmpty()) {
                         return false;
                     }
-                    ValueNode arg0 = args.get(0);
-                    if (!(arg0 instanceof NewInstanceNode)) {
+                    ValueNode arg0 = args.getFirst();
+                    ResolvedJavaType newType = null;
+                    if (arg0 instanceof NewInstanceNode newInstanceNode) {
+                        newType = newInstanceNode.instanceClass();
+                    } else if (arg0 instanceof Invoke invokeNode) {
+                        // Constructor replaced by SVM FactoryMethod
+                        AnalysisMethod targetMethod = (AnalysisMethod) invokeNode.getTargetMethod();
+                        if (targetMethod.wrapped instanceof FactoryMethod factoryMethod) {
+                            newType = method.getUniverse().lookup(factoryMethod.getTargetConstructor().getDeclaringClass());
+                        }
+                    } else if (arg0 instanceof AllocatedObjectNode allocatedObjectNode) {
+                        newType = allocatedObjectNode.getVirtualObject().type();
+                    }
+                    if (newType == null) {
                         return false;
                     }
-                    ResolvedJavaType newType = ((NewInstanceNode) arg0).instanceClass();
                     ResolvedJavaMethod methodCalledByAccessController = findPrivilegedEntryPoint(method, trace);
-                    if (newType == null || methodCalledByAccessController == null) {
+                    if (methodCalledByAccessController == null) {
                         return false;
                     }
                     if (newType.equals(methodCalledByAccessController.getDeclaringClass())) {
@@ -730,16 +870,24 @@ public class PermissionsFeature implements Feature {
         }
 
         /**
-         * Finds an entry point to {@code PrivilegedAction} called by {@code doPrivilegedMethod}.
+         * Identifies the entry point to a {@code PrivilegedAction} invoked by
+         * {@code doPrivilegedMethod}. Iterates through the inverted call stack, starting from the
+         * current frame, up to the privileged call. Returns the first method that is not part of
+         * {@code AccessController}.
          */
-        private ResolvedJavaMethod findPrivilegedEntryPoint(ResolvedJavaMethod doPrivilegedMethod, LinkedHashSet<BaseMethodNode> trace) {
-            ResolvedJavaMethod ep = null;
-            for (BaseMethodNode mNode : trace) {
-                AnalysisMethod m = mNode.getMethod();
-                if (doPrivilegedMethod.equals(m)) {
-                    return ep;
+        private static ResolvedJavaMethod findPrivilegedEntryPoint(ResolvedJavaMethod doPrivilegedMethod, List<BaseMethodNode> trace) {
+            ResolvedJavaType accessController = doPrivilegedMethod.getDeclaringClass();
+            ListIterator<BaseMethodNode> it = trace.listIterator(trace.size());
+            assert doPrivilegedMethod.equals(it.previous().getMethod()) : String.format("%s must be current stack frame.", trace);
+            while (it.hasPrevious()) {
+                BaseMethodNode mNode = it.previous();
+                ResolvedJavaMethod method = mNode.getMethod();
+                /*
+                 * Ignore AccessController internal methods.
+                 */
+                if (!method.getDeclaringClass().equals(accessController)) {
+                    return method;
                 }
-                ep = m;
             }
             return null;
         }
@@ -750,67 +898,55 @@ public class PermissionsFeature implements Feature {
         }
     }
 
-    private static final class SafeServiceLoaderRecognizer implements CallGraphFilter {
+    /**
+     * Filters out reflection done by JRE or by code in safe packages.
+     */
+    private static final class SafeReflectionRecognizer implements CallGraphFilter {
 
-        private final AnalysisMethodNode providerImplGet;
-        private final ImageClassLoader imageClassLoader;
+        private final Set<AnalysisMethodNode> inspectedMethods;
 
-        SafeServiceLoaderRecognizer(BigBang bb, ImageClassLoader imageClassLoader) {
-            AnalysisType serviceLoaderIterator = bb.getMetaAccess().lookupJavaType(loadClassOrFail("java.util.ServiceLoader$ProviderImpl"));
-            Set<AnalysisMethodNode> methods = findMethods(bb, serviceLoaderIterator, (m) -> m.getName().equals("get"));
+        SafeReflectionRecognizer(BigBang bb) {
+            inspectedMethods = new HashSet<>();
+            AnalysisType method = bb.getMetaAccess().lookupJavaType(Method.class);
+            Set<AnalysisMethodNode> methods = findMethods(bb, method, (m) -> m.getName().equals("invoke") && m.isPublic() && m.getParameters().length == 2);
             if (methods.size() != 1) {
-                throw new IllegalStateException("Failed to lookup ServiceLoader$ProviderImpl.get().");
+                throw new IllegalStateException("Failed to lookup Method.invoke(Object,Object...).");
             }
-            this.providerImplGet = methods.iterator().next();
-            this.imageClassLoader = imageClassLoader;
+            inspectedMethods.addAll(methods);
+
+            AnalysisType constructor = bb.getMetaAccess().lookupJavaType(Constructor.class);
+            methods = findMethods(bb, constructor, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 1);
+            if (methods.size() != 1) {
+                throw new IllegalStateException("Failed to lookup Constructor.newInstance(Object...).");
+            }
+            inspectedMethods.addAll(methods);
+
+            AnalysisType clazz = bb.getMetaAccess().lookupJavaType(Class.class);
+            methods = findMethods(bb, clazz, (m) -> m.getName().equals("newInstance") && m.isPublic() && m.getParameters().length == 0);
+            if (methods.size() != 1) {
+                throw new IllegalStateException("Failed to lookup Class.newInstance().");
+            }
+            inspectedMethods.addAll(methods);
+
+            AnalysisType methodHandle = bb.getMetaAccess().lookupJavaType(MethodHandle.class);
+            methods = findMethods(bb, methodHandle, (m) -> m.getName().startsWith("invoke") && m.isPublic());
+            if (methods.isEmpty()) {
+                throw new IllegalStateException("Failed to lookup MethodHandle.invoke methods.");
+            }
+            inspectedMethods.addAll(methods);
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
-            if (providerImplGet.equals(methodNode)) {
-                ResolvedJavaType instantiatedType = findInstantiatedType(trace);
-                return instantiatedType != null && !isRegisteredInServiceLoader(instantiatedType);
-            }
-            return false;
-        }
-
-        /**
-         * Finds last constructor invocation.
-         */
-        private static ResolvedJavaType findInstantiatedType(LinkedHashSet<BaseMethodNode> trace) {
-            ResolvedJavaType res = null;
-            for (BaseMethodNode mNode : trace) {
-                AnalysisMethod m = mNode.getMethod();
-                if (m != null && "<init>".equals(m.getName())) {
-                    res = m.getDeclaringClass();
-                }
-            }
-            return res;
-        }
-
-        /**
-         * Finds if the given type may be instantiated by ServiceLoader.
-         */
-        private boolean isRegisteredInServiceLoader(ResolvedJavaType type) {
-            String resource = String.format("META-INF/services/%s", type.toClassName());
-            if (imageClassLoader.getClassLoader().getResource(resource) != null) {
-                return true;
-            }
-            for (ResolvedJavaType ifc : type.getInterfaces()) {
-                if (isRegisteredInServiceLoader(ifc)) {
-                    return true;
-                }
-            }
-            ResolvedJavaType superClz = type.getSuperclass();
-            if (superClz != null) {
-                return isRegisteredInServiceLoader(superClz);
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
+            if (inspectedMethods.contains(methodNode)) {
+                return isSystemOrSafeClass(callerNode);
             }
             return false;
         }
 
         @Override
         public Collection<AnalysisMethod> getInspectedMethods() {
-            return Set.of(providerImplGet.getMethod());
+            return inspectedMethods.stream().map(AnalysisMethodNode::getMethod).toList();
         }
     }
 
@@ -839,7 +975,7 @@ public class PermissionsFeature implements Feature {
         }
 
         @Override
-        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, LinkedHashSet<BaseMethodNode> trace) {
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
             if (!threadSetName.equals(methodNode)) {
                 return false;
             }
@@ -850,12 +986,12 @@ public class PermissionsFeature implements Feature {
             for (Invoke invoke : graph.getInvokes()) {
                 if (method.equals(invoke.callTarget().targetMethod())) {
                     NodeInputList<ValueNode> args = invoke.callTarget().arguments();
-                    ValueNode arg0 = args.get(0);
+                    ValueNode arg0 = args.getFirst();
                     boolean isTruffleThread = false;
-                    if (arg0 instanceof PiNode) {
-                        arg0 = ((PiNode) arg0).getOriginalNode();
-                        if (arg0 instanceof Invoke) {
-                            ResolvedJavaMethod target = ((Invoke) arg0).callTarget().targetMethod();
+                    if (arg0 instanceof PiNode piNode) {
+                        arg0 = piNode.getOriginalNode();
+                        if (arg0 instanceof Invoke invokeNode) {
+                            ResolvedJavaMethod target = invokeNode.callTarget().targetMethod();
                             isTruffleThread = envCreateThread.contains(target) || envCreateSystemThread.contains(target);
                         }
                     }
@@ -875,12 +1011,60 @@ public class PermissionsFeature implements Feature {
     }
 
     /**
-     * Options facade for a resource containing the JRE white list.
+     * All JDK subclasses of LocaleServiceProvider are allowed.
      */
-    private static final class ResourceAsOptionDecorator extends HostedOptionKey<LocatableMultiOptionValue.Strings> {
+    private static final class SafeLocaleServiceProvider implements CallGraphFilter {
 
-        ResourceAsOptionDecorator(String defaultValue) {
-            super(LocatableMultiOptionValue.Strings.buildWithDefaults(defaultValue));
+        private final AnalysisMethodNode localeServiceProviderInit;
+
+        SafeLocaleServiceProvider(BigBang bb) {
+            Set<AnalysisMethodNode> constructors = findConstructors(bb, LocaleServiceProvider.class, (m) -> m.getParameters().length == 0);
+            if (constructors.size() != 1) {
+                throw new IllegalStateException("Failed to lookup LocaleServiceProvider.<init>().");
+            }
+            localeServiceProviderInit = constructors.iterator().next();
+        }
+
+        @Override
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
+            if (localeServiceProviderInit.equals(methodNode)) {
+                return isSystemOrSafeClass(callerNode);
+            }
+            return false;
+        }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return Set.of(localeServiceProviderInit.getMethod());
+        }
+    }
+
+    /**
+     * JDK classes are allowed to read System properties.
+     */
+    private static final class SafeSystemGetProperty implements CallGraphFilter {
+
+        private final Set<AnalysisMethodNode> getProperty;
+
+        SafeSystemGetProperty(BigBang bb) {
+            Set<AnalysisMethodNode> methods = findMethods(bb, System.class, (m) -> "getProperty".equals(m.getName()));
+            if (methods.size() != 2) {
+                throw new IllegalStateException("Failed to lookup System.getProperty.");
+            }
+            getProperty = methods;
+        }
+
+        @Override
+        public boolean test(BaseMethodNode methodNode, BaseMethodNode callerNode, List<BaseMethodNode> trace) {
+            if (getProperty.contains(methodNode)) {
+                return isSystemOrSafeClass(callerNode);
+            }
+            return false;
+        }
+
+        @Override
+        public Collection<AnalysisMethod> getInspectedMethods() {
+            return getProperty.stream().map(AnalysisMethodNode::getMethod).collect(Collectors.toSet());
         }
     }
 
@@ -982,149 +1166,6 @@ public class PermissionsFeature implements Feature {
         public String toString() {
             return String.format("%s[method=%s]", ClassUtil.getUnqualifiedName(getClass()), method);
         }
-    }
-}
-
-@TargetClass(value = java.lang.SecurityManager.class, onlyWith = PermissionsFeature.IsEnabled.class)
-final class Target_java_lang_SecurityManager {
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkSecurityAccess(String target) {
-    }
-
-    @Substitute
-    private void checkSetFactory() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPackageDefinition(String pkg) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPackageAccess(String pkg) {
-    }
-
-    @Substitute
-    private void checkPrintJobAccess() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPropertyAccess(String key) {
-    }
-
-    @Substitute
-    private void checkPropertiesAccess() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkMulticast(InetAddress maddr) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkAccept(String host, int port) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkListen(int port) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkConnect(String host, int port, Object context) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkConnect(String host, int port) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkDelete(String file) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkWrite(String file) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkWrite(FileDescriptor fd) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkRead(String file, Object context) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkRead(String file) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkRead(FileDescriptor fd) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkLink(String lib) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkExec(String cmd) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkExit(int status) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkAccess(ThreadGroup g) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkAccess(Thread t) {
-    }
-
-    @Substitute
-    private void checkCreateClassLoader() {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPermission(Permission perm, Object context) {
-    }
-
-    @Substitute
-    @SuppressWarnings("unused")
-    private void checkPermission(Permission perm) {
-    }
-}
-
-final class SecurityManagerHolder {
-    @SuppressWarnings("deprecation") // SecurityManager deprecated since 17.
-    static final SecurityManager SECURITY_MANAGER = new SecurityManager();
-}
-
-@TargetClass(value = java.lang.System.class, onlyWith = PermissionsFeature.IsEnabled.class)
-final class Target_java_lang_System {
-    @Substitute
-    private static SecurityManager getSecurityManager() {
-        return SecurityManagerHolder.SECURITY_MANAGER;
     }
 }
 
